 HT ChangeLog
==============

version 0.9-trunk:
	- analyser: support for int, half and byte data-types.
	- x86 disasm: invlpg, fisttp instructions added
	- x86 asm: support for mmx instructions
	- configure: set -DNO_NATIVE_UNALIGNED_MOVES for platforms
	  other than x86
	- removed 'include <malloc.h>' from cp-demangle.c
	- fixed a buffer overflow in htperes.cc

version 0.8.0:
	- g++ v3 abi demangler
	- x86 disasm: added undocumented ffreep (df c0) instruction
	- compiles with gcc 3.4
	- fixed buggy blockop-progress indicator
	- fixed ugly segfault with elf symbol loading
	- ppc disassebler updated (altivec instructions)
	- removed stefan's email address (dead)

version 0.8.0pre1:
	- disassembler:
		- IBM/Motorola PowerPC (PPC) (new)
	- file formats:
		- XBE (X-Box executable) support by Stefan Esser (experimental)
		- Mach-O header and image support for PPC and x86 (experimental)
		- FLT (Flat) support (experimental)
		- PEF support (experimental)
		- XCOFF32 support
		- COFF support for coff files without optional header
		- COFF big-endian support
		- ELF PPC support
		- ELF relocatable file support (experimental)
		- fixed buggy ELF reading code partially (thanks rpm28)
	- eval dialog: added function help
	- eval: not ('~') and logical-not ('!') operators
	- disassembler interface (int maxlen, not byte maxlen)
	- Win32: fixed access to native windows clipboard
	- Win32: high CPU usage problems fixed (sys_suspend() bugged)
	
version 0.7.5:
	- fixed bug in bnstr() with defaultbase > 10
	- fixed buffer overflow in htelfsym.cc (thanks Luis Barrancos)
	- fixed bug in ht_sys_file/ht_stdio_file::extend()
	- fixed bug, causing invalid history entries when specifying files
	  on the command-line
	- fixed bug in x86-assembler (correct opcode for [ebp+esp])
	- minor fixes in eval-lexer

version 0.7.4:
	- fixed bug in COFF code (hdr_ofs sometimes fixed to 0x800)
	- fixed bug in blockop (checking if const/var op didn't set 'i' and 'o' and sometimes failed)