@@ -174,19 +174,21 @@ static ht_view *htpeimports_init(bounds *b, ht_streamfile *file, ht_format_group
 		PE_THUNK_DATA *thunk_table = NULL;
 		PE_THUNK_DATA_64 *thunk_table64 = NULL;
 		file->seek(thunk_ofs);
-		if (pe32) {
-			thunk_table=(PE_THUNK_DATA*)malloc(sizeof *thunk_table * thunk_count);
-			file->read(thunk_table, sizeof *thunk_table * thunk_count);
-			// FIXME: ?
-			for (UINT i=0; i<thunk_count; i++) {
-				create_host_struct(thunk_table+i, PE_THUNK_DATA_struct, little_endian);
-			}
-		} else {
-			thunk_table64=(PE_THUNK_DATA_64*)malloc(sizeof *thunk_table64 * thunk_count);
-			file->read(thunk_table64, sizeof *thunk_table64 * thunk_count);
-			// FIXME: ?
-			for (UINT i=0; i<thunk_count; i++) {
-				create_host_struct(thunk_table64+i, PE_THUNK_DATA_64_struct, little_endian);
+		if (thunk_count) {
+			if (pe32) {
+				thunk_table=(PE_THUNK_DATA*)malloc(sizeof *thunk_table * thunk_count);
+				file->read(thunk_table, sizeof *thunk_table * thunk_count);
+				// FIXME: ?
+				for (UINT i=0; i<thunk_count; i++) {
+					create_host_struct(thunk_table+i, PE_THUNK_DATA_struct, little_endian);
+				}
+			} else {
+				thunk_table64=(PE_THUNK_DATA_64*)malloc(sizeof *thunk_table64 * thunk_count);
+				file->read(thunk_table64, sizeof *thunk_table64 * thunk_count);
+				// FIXME: ?
+				for (UINT i=0; i<thunk_count; i++) {
+					create_host_struct(thunk_table64+i, PE_THUNK_DATA_64_struct, little_endian);
+				}
 			}
 		}
 		for (dword i=0; i<thunk_count; i++) {
